GOC-26 Como administrador quiero que los usuarios de la aplicación se autentiquen utilizando el SSO disponible
git-svn-id: http://jira.uji.es/repos/uji/GOC/goc/trunk@32342 e6edf6fb-f266-4316-afb4-e53d95876a76
